PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Dec 2006, PHP 5.2.1RC2
- Added function stream_socket_shutdown(). It is a wraper for system shutdown()
  function, that shut downs part of a full-duplex connection. (Dmitry)
- Added internal heap protection (Dmitry)
  . safe unlinking
  . cookies
  . canary protection (debug build only)
  . random generation of cookies and canaries
- Fixed incorrect function names on FreeBSD where inet_pton() was named
  __inet_pton() and inet_ntop() was named __inet_ntop() (Hannes)

- Fixed bug #39869 (safe_read does not initialize errno).
  (michiel at boland dot org, Dmitry)
- Fixed bug #39850 (SplFileObject throws contradictory/wrong error messages 
  when trying to open "php://wrong"). (Tony)
- Fixed bug #39832 (SOAP Server: parameter not matching the WSDL specified type
  are set to 0). (Dmitry)
- Fixed bug #39815 (SOAP double encoding is not locale-independent). (Dmitry)
- Fixed bug #39685 (iconv() - undefined function). (Hannes)
- Fixed bug #38852 (XML-RPC Breaks iconv). (Hannes)

14 Dec 2006, PHP 5.2.1RC1
- Added a meta tag to phpinfo() output to prevent search engines from indexing 
  the page. (Ilia)
- Added new function, sys_get_temp_dir(). (Hartmut)
- Added missing object support to file_put_contents(). (Ilia)
- Changed double-to-string utilities to use BSD implementation. (Dmitry, Tony)
- Updated bundled libcURL to version 7.16.0 in the Windows distro. (Edin)
- Updated timezone database to version 2006.16. (Derick)
- cgi.* and fastcgi.* directives are moved to INI subsystem.
  The new directive cgi.check_shebang_line can be used to ommiting checnk
  for "#! /usr/bin/php" line. (Dmitry).
- Windows related optimizations (Dmitry, Stas)
  . COM initialization/deinitialization are done only if necessary
  . removed unnecessary checks for ISREG file and corresponding stat() calls